concord_macros/tests/dsl/fail/fail_duplicate_behavior_flat_and_group.rs
use concord_macros::api;

api! {
    client DuplicateBehaviorMixedApi {
        base "https://example.com"

        behavior read {
            retry off
        }

        behaviors {
            behavior read {
                retry off
            }
        }
    }

    GET Ping
    path ["ping"]
    -> Text<String>
}

fn main() {}
